tests/core/snapshots/add-field-index-list.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

type Query @addField(name: "username", path: ["users", "0", "name"]) {
  users: [User] @http(url: "http://jsonplaceholder.typicode.com/users")
}

type User {
  name: String
}
