tests/core/snapshots/add-field-many-list.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type A {
  b: [String]
  c: String
  d: String
}

scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  u: U
}

type U {
  a: A
  b: [String]
  c: String
  d: String
  e: String
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
