tests/core/snapshots/add-field-many.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

type Foo {
  a: String
  b: String
  c: String
  name: String
  x: X
}

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  user: Foo
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

type X {
  a: String
  b: String
  c: String
}

schema {
  query: Query
}
