tests/core/snapshots/add-field-modify.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "name": "foo",
        "street": "Kulas Light",
        "city": "Gwenborough",
        "zipcode": "92998-3874"
      }
    }
  }
}
