tests/core/snapshots/add-field-modify.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Address {
  city: String
  street: String
  zipcode: String
}

type Query {
  user: User
}

type User {
  address: Address
  city: String
  name: String
  street: String
  zipcode: String
}

schema {
  query: Query
}
