tests/core/snapshots/add-field-with-composition.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "lat": "-37.3159"
    }
  }
}
