tests/core/snapshots/add-field-with-composition.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "lng": "81.1496"
    }
  }
}
