tests/core/snapshots/add-field-with-composition.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Address {
  geo: Geo
  street: String
}

scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

type Geo {
  lat: String
  lng: String
}

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  lat: String
  lng: String
  user: User
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

type User {
  address: Address
}

schema {
  query: Query
}
